# Object-Detection

./: .gitignore  README.md
code/: Adaboost.cpp  Adaboost.h  CMakeLists.txt  main.cpp
code/classifiers/: cascade.xml  classifier.yaml  hog_1.yaml  hog_2.yaml  hog_3.yaml  hog_4.yaml  hog_5.yaml  lbp_1.yaml  lbp_2.yaml  lbp_3.yaml  lbp_4.yaml  lbp_5.yaml  scheme_1.yaml  scheme_2.yaml  scheme_3.yaml  scheme_4.yaml  scheme_5.yaml  scheme_6.yaml  scheme_7.yaml  scheme_8.yaml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml  (+1 more)
code/classifiers/classifier/: positive.txt
code/classifiers/hog_1/: negative.txt  output.txt  results.txt
code/classifiers/hog_2/: output.txt  results.txt
code/classifiers/hog_3/: balls.vec  output.txt  positive.txt  results.txt
code/classifiers/hog_4/: balls.vec  output.txt  results.txt
code/classifiers/hog_5/: output.txt  results.txt
code/classifiers/lbp_1/: output.txt  results.txt
code/classifiers/lbp_2/: output.txt  results.txt
code/classifiers/lbp_3/: output.txt  results.txt
code/classifiers/lbp_4/: negative.txt  output.txt  positive.txt  results.txt
code/classifiers/lbp_5/: balls.vec  negative.txt  output.txt  results.txt
code/classifiers/scheme_1/: output.txt  results.txt
code/classifiers/scheme_2/: negative.txt  output.txt  results.txt
code/classifiers/scheme_3/: output.txt  results.txt
code/classifiers/scheme_4/: output.txt  results.txt
code/classifiers/scheme_5/: output.txt  positive.txt  results.txt
code/classifiers/scheme_6/: balls.vec  negative.txt  positive.txt  results.txt
code/classifiers/scheme_7/: balls.vec  negative.txt  positive.txt  results.txt
code/classifiers/scheme_8/: balls.vec  negative.txt  (+3 more)
code/scripts/: detection_stats.py  display_search_word_names.py  extract_object_windows.py  filter.py  get_data.py  parent_words_background.yaml  parent_words_negative.yaml  parent_words_office.yaml  positive-script.sh  recalculate_stats.py  resize.py  show_samples.py  train_classifier.py
code/training/: balls.vec  commands.txt  negative-script.bat  negative-test.txt  negative.txt  positive.txt
code/webcam/: CMakeLists.txt  webcam.cpp
(+663 files in other folders)
